--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,3 +11,9 @@ provisioner:
   name: ansible
 verifier:
   name: ansible
+scenario:
+  name: default
+  test-sequence:
+    - lint
+    - destroy
+    - converge
